--- a/MySite/Templates/signin.twig
+++ b/MySite/Templates/signin.twig
@@ -7,23 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="validation.js"></script>
+    <script src=""></script>
 </head>
 
 <body>
 <div class="container">
     <h1>Authentication</h1>
-    <form name="signIn" method="post" action="SignIn.php">
+    <form name="signIn" method="post" action="../Authorization/signin.php">
         <ul style="list-style-type: none; padding: 0;">
             <li><label for="usernameLogin">Username:</label></li>
-
-            <li><input id="usernameLogin" type="text" name="usernameLogin" width="25" size="25" value="" placeholder="Please input your username"></li>
-            <li style="color: #bd2c00">{{ name }}</li>
+            <li><input id="usernameLogin" type="text" name="usernameLogin" width="25" size="25" placeholder="Please input your username" value="{{ usernameValue }}"></li>
+            <li style="color: #bd2c00">{{ username }}</li>
             <li><label for="passwordLogin">Password:</label></li>
-            <li><input id="passwordLogin" type="password" name="passwordLogin" width="25" size="25" placeholder="Please input your password"></li>
+            <li><input id="passwordLogin" type="password" name="passwordLogin" width="25" size="25" placeholder="Please input your password" value=""></li>
             <li style="color: #bd2c00">{{ password }}</li>
             <li style="padding-top: 5px;"><button class="btn btn-success" type="submit" name="submit" value="submit"><i class="fa fa-save"></i> Submit</button></li>
-            <li><a href="SignUp.html">Create new account</a></li>
+            <li><a href="../Authorization/signup.html">Create new account</a></li>
+            <li style="color: #bd2c00">{{ errorMessage }}</li>
 
         </ul>
     </form>
