--- a/MySite/Templates/signin.twig
+++ b/MySite/Templates/signin.twig
@@ -24,6 +24,7 @@
             <li style="padding-top: 5px;"><button class="btn btn-success" type="submit" name="submit" value="submit"><i class="fa fa-save"></i> Submit</button></li>
             <li><a href="../Authorization/signup.html">Create new account</a></li>
             <li style="color: #bd2c00">{{ errorMessage }}</li>
+            <li style="color: #228B22">{{ message }}</li>
 
         </ul>
     </form>
