--- a/Prog/FRONT-END Start/Lesson_5/lesson/example/main.css
+++ b/Prog/FRONT-END Start/Lesson_5/lesson/example/main.css
@@ -5,8 +5,11 @@ body{
 
 aside{
   width: 300px;
+  height: 100vh;
   background-color: #000;
+  position: fixed;
 }
+
 .logo{
   height: 70px;
   line-height: 70px;
@@ -15,26 +18,33 @@ aside{
   border-bottom: 1px solid red;
   margin-bottom: 30px;
 }
+
 .menu{
   text-align: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
+
 .menu li a{
   display: block;
   color: #fff;
   text-decoration: none;
   padding: 10px 0;
 }
+
 header{
   height: 300px;
   background-image: url(img/bg1.jpg);
   -webkit-background-size: cover;
   background-size: cover;
   background-position: 0 -160px;
-  margin-left: -300px;
+  margin-left: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 h1{
   margin: 0;
   line-height: 300px;
@@ -43,20 +53,44 @@ h1{
   text-transform: uppercase;
 }
 
+.gallery {
+  margin-left: 300px;
+}
+
 h2{
   text-align: center;
   text-transform: uppercase;
   margin: 40px 0;
 }
+
 .galleryBox{
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
 .galleryBox .item{
   width: 250px;
   margin: 0 10px 20px 10px;
   color: #fff;
   overflow: hidden;
+  position: relative;
 }
+
 .galleryBox .item img{
   width: 100%;
+  display: block;
+}
+
+.item-overlay {
+  height: 0;
+}
+
+.item-overlay:hover {
+  height: 100%;
+}
+
+.item>img:hover {
+  height: 100%;
+
 }
