--- a/Prog/FRONT-END Start/Lesson_5/lesson/example/main.css
+++ b/Prog/FRONT-END Start/Lesson_5/lesson/example/main.css
@@ -83,14 +83,19 @@ h2{
 }
 
 .item-overlay {
-  height: 0;
+  font-size: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 255, 0, 0);
+  transition: padding-top 0.5s;
+  text-align: center;
 }
 
 .item-overlay:hover {
-  height: 100%;
+  font-size: 16px;
+  background-color: rgba(0, 255, 0, 0.3);
+  padding-top: 50%;
 }
-
-.item>img:hover {
-  height: 100%;
 
 }
