--- a/Prog/FRONT-END Start/Lesson_5/lesson/example/main.css
+++ b/Prog/FRONT-END Start/Lesson_5/lesson/example/main.css
@@ -75,27 +75,29 @@ h2{
   color: #fff;
   overflow: hidden;
   position: relative;
+  line-height: 0;
 }
 
 .galleryBox .item img{
   width: 100%;
-  display: block;
 }
 
 .item-overlay {
-  font-size: 0;
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: rgba(0, 255, 0, 0);
-  transition: padding-top 0.5s;
-  text-align: center;
+  top: -100%;
+  left: 0;
+  background-color: rgba(0, 255, 0, .3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: top 0.5s;
+
 }
 
-.item-overlay:hover {
-  font-size: 16px;
-  background-color: rgba(0, 255, 0, 0.3);
-  padding-top: 50%;
+.item:hover .item-overlay{
+  top: 0;
 }
 
 }
