--- a/Prog/FRONT-END Start/Lesson_5/lesson/example/cube.css
+++ b/Prog/FRONT-END Start/Lesson_5/lesson/example/cube.css
@@ -1,6 +1,6 @@
 .wrap {
     perspective: 800px;
-    perspective-origin: 50% 100px;
+    perspective-origin: center center;
 }
 
 .cube {
@@ -9,20 +9,21 @@
     width: 200px;
     height: 200px;
     transform-style: preserve-3d;
-    /*animation: spin 10s infinite linear;*/
+    animation: spin 6s infinite linear;
 }
 
 .side {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(2, 40, 70, .5);
     color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
     letter-spacing: 2px;
+    border: 1px solid black;
 }
 
 .top {
@@ -50,10 +51,10 @@
 }
 
 @keyframes spin {
-    from {
-        transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg)
+    0% {
+        transform: rotateX(0deg) rotateY(0deg)
     }
-    to {
-        transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg)
+    100% {
+        transform: rotateX(360deg) rotateY(360deg)
     }
 }
