--- a/Prog/FRONT-END Start/Lesson_8/site/css/main.css
+++ b/Prog/FRONT-END Start/Lesson_8/site/css/main.css
@@ -85,7 +85,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff; }
+  color: #fff;
+  margin-bottom: 92px; }
 
 .s_title_block {
   width: 800px;
@@ -112,7 +113,7 @@ header {
 .section_header {
   width: 960px;
   text-align: center;
-  margin: 90px auto; }
+  margin: 0 auto; }
 
 .section_header__title {
   font-family: "Kaushan", sans-serif;
@@ -130,7 +131,8 @@ header {
   margin: 48px auto;
   width: 60px;
   height: 2px;
-  background-color: #f38181; }
+  background-color: #f38181;
+  border: none; }
 
 .section_header__desc {
   color: #a0a0a0;
@@ -140,7 +142,8 @@ header {
   width: 31%;
   position: relative;
   transition: all 0.4s;
-  line-height: 0; }
+  line-height: 0;
+  margin-top: 100px; }
   .about_item:after {
     content: "";
     position: absolute;
@@ -212,17 +215,57 @@ header {
 .service_block {
   display: flex; }
 
-.service_block_content {
-  background-image: url(../img/clock.jpg);
-  background-repeat: no-repeat;
-  margin-left: 30px;
-  width: 33%; }
+.service_block_content_top, .service_block_content_bottom {
+  background: url(../img/clock.jpg) no-repeat 32px 0;
+  width: 30%; }
 
-.service_top_content__header, .service_top_content__desc {
-  margin-left: 58px; }
+.service_block_content_bottom {
+  margin-bottom: 122px; }
+
+.service_block_content_top__header, .service_block_content_top__desc, .service_block_content_bottom__header, .service_block_content_bottom__desc {
+  padding-left: 92px;
+  font-size: 14px; }
+
+.service_block_content_top__header, .service_block_content_bottom__header {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 20px; }
+
+.service_block_content_top__desc, .service_block_content_bottom__desc {
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
+  color: #999999; }
 
 .service_block_line {
   width: 100%;
-  margin: 20px 0; }
+  margin: 50px 0;
+  color: #999999; }
+
+.features {
+  height: 856px;
+  background: url(../img/features_bg.jpg) no-repeat -500px center;
+  position: relative;
+  z-index: -1;
+  padding-top: 110px; }
+  .features:before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.85);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1; }
+
+.features_images {
+  height: 100%;
+  overflow: hidden;
+  text-align: center; }
+  .features_images .features_images_laptop {
+    width: 530px; }
+
+.features_images_phone {
+  width: 308px;
+  transform: translate(750px, -450px); }
 
 /*# sourceMappingURL=main.css.map */
