--- a/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
@@ -280,43 +280,48 @@ header
 		//display: flex
 		//flex-direction: column
 		//justify-content: space-between
-		.service2_content__service__top_block
-			.service2_content__services__desc
-				display: block
+		.service2_content__services__desc
+			margin-top: -1px
+			border: 1px solid #cccccc
+			display: block
+			padding: 20px
+			color: #cccccc
+		.service2_content__services__name
+			margin-top: -1px
+			border: 1px solid #cccccc
+			height: 50px
+			background: url(../img/photo.png) no-repeat 10px 10px
+			display: flex
+			justify-content: space-between
+			align-items: center
+			.service2_content__services__name__title
 				margin-left: 50px
-			.service2_content__services__name
-				height: 50px
-				background: url(../img/photo.png) no-repeat 10px 10px
-				//display: flex
-				//justify-content: space-between
-				.service2_content__services__name__title
-					margin-left: 50px
-					text-transform: uppercase
-					font-family: $titleFont
-					color: #000
-					font-size: 10px
-				.service2_content__services__name__show_more
-					position: relative
-					&:before
-						content: ''
-						width: 25px
-						height: 4px
-						background-color: #cccccc
-						position: absolute
-						top: 10px
-						right: 25px
-						transform: rotateZ(-45deg)
-						z-index: 1
-					&:after
-						content: ''
-						width: 25px
-						height: 4px
-						background-color: #cccccc
-						position: absolute
-						top: 10px
-						right: 10px
-						transform: rotateZ(45deg)
-						z-index: 1
+				text-transform: uppercase
+				font-family: $titleFont
+				color: #000
+				font-size: 14px
+			.service2_content__services__name__show_more
+				position: relative
+				&:before
+					content: ''
+					width: 25px
+					height: 4px
+					background-color: #cccccc
+					position: absolute
+					top: 0
+					right: 35px
+					transform: rotateZ(-45deg)
+					z-index: 1
+				&:after
+					content: ''
+					width: 25px
+					height: 4px
+					background-color: #cccccc
+					position: absolute
+					top: 0
+					right: 20px
+					transform: rotateZ(45deg)
+					z-index: 1
 
 
 
