--- a/Prog/FRONT-END Start/Lesson_8/site/sass/_vars.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/_vars.sass
@@ -1,6 +1,7 @@
 $mainColor: #95e1d3
 $mainColor2: #f38181
 $activeLink: #fce38a
+$lightGrey: #cccccc
 $mainFont: "Roboto", sans-serif
 $titleFont: "Montserrat", sans-serif
 $handWritenFont: "Kaushan", sans-serif
