--- a/Prog/FRONT-END Start/Lesson_8/site/sass/fonts.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/fonts.sass
@@ -15,6 +15,12 @@
   font-weight: normal
 
 @font-face
+  font-family: "Roboto"
+  src: url("../fonts/Roboto/Roboto-LightItalic.ttf") format("truetype")
+  font-style: italic
+  font-weight: 300
+
+@font-face
   font-family: "Montserrat"
   src: url("../fonts/Montserrat/Montserrat-Regular.ttf") format("truetype")
   font-style: normal
