--- a/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
@@ -270,25 +270,30 @@ header
 .service2_content
 	display: flex
 	justify-content: center
+	margin: 96px 0 122px 0
 	.service2_content__image
+		height: 320px
 		width: 50%
-		background-image: url(../img/pic.png)
+		background-image: url(../img/start_bg.jpg)
 		-webkit-background-size: cover
 		background-size: cover
+		margin-right: 30px
 	.service2_content__services
 		width: 50%
-		//display: flex
-		//flex-direction: column
-		//justify-content: space-between
+		display: flex
+		flex-direction: row
+		flex-wrap: wrap
+		justify-content: space-between
+		align-items: stretch
 		.service2_content__services__desc
 			margin-top: -1px
-			border: 1px solid #cccccc
+			border: 1px solid $lightGrey
 			display: block
 			padding: 20px
-			color: #cccccc
+			color: $lightGrey
 		.service2_content__services__name
-			margin-top: -1px
-			border: 1px solid #cccccc
+			//width: 100%
+			border: 1px solid $lightGrey
 			height: 50px
 			background: url(../img/photo.png) no-repeat 10px 10px
 			display: flex
@@ -300,28 +305,56 @@ header
 				font-family: $titleFont
 				color: #000
 				font-size: 14px
-			.service2_content__services__name__show_more
-				position: relative
-				&:before
-					content: ''
-					width: 25px
-					height: 4px
-					background-color: #cccccc
-					position: absolute
-					top: 0
-					right: 35px
-					transform: rotateZ(-45deg)
-					z-index: 1
-				&:after
-					content: ''
-					width: 25px
-					height: 4px
-					background-color: #cccccc
-					position: absolute
-					top: 0
-					right: 20px
-					transform: rotateZ(45deg)
-					z-index: 1
 
+.service2_content__service__top_block
+	width: 100%
+
+.service2_content__services__name__show_more
+	display: inline-block
+	>img
+		width: 25px
+		margin-right: 10px
+
+.service2_content__services__name__show_more--up
+	transform: rotateX(180deg)
+
+.service2_content__services__name__show_more--left
+	transform: rotateX(90deg)
+
+.service2_content__services__name__show_more--right
+	transform: rotateX(-90deg)
+
+.quote_s
+	width: 100%
+	background-color: #f8f8f8
+	.quote_s_content
+		margin: 70px 110px
+		&:after
+			clear: both
+		.quote_s_content__img
+			float: left
+			margin-right: 60px
+		.quote_s_content__text__main_text
+			font-family: $mainFont
+			font-style: italic
+			font-weight: 300
+			font-size: 24px
+			color: $lightGrey
+			line-height: 1.5
+		.quote_s_content__text_name
+			display: flex
+			align-items: center
+			margin-top: 20px
+			.quote_s_content__line
+				margin-left: 0
+				width: 60px
+				height: 3px
+				border: none
+				background-color: $mainColor2
+				margin-right: 10px
+			.quote_s_content__author
+				font-family: $handWritenFont
+				font-weight: normal
+				font-size: 24px
 
 
