--- a/Prog/FRONT-END Start/Lesson_7/css/main.css
+++ b/Prog/FRONT-END Start/Lesson_7/css/main.css
@@ -1,6 +1,21 @@
+.my_btn {
+  text-transform: uppercase;
+  padding: 10px 25px;
+  border: 2px solid #fff;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700px;
+  font-size: 14px;
+  cursor: pointer;
+  background-color: transparent; }
+
 body {
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: normal;
+  overflow: hidden;
   margin: 0;
-  font-family: sans-serif; }
+  line-height: 1; }
 
 h1, h2, h3, h4, h5, h6, p, ul {
   margin: 0; }
@@ -11,102 +26,93 @@ ul {
 a {
   text-decoration: none; }
 
-.container {
+.container,
+.container_flex {
   width: 1170px;
-  height: 100%;
   margin: 0 auto; }
 
-.header {
-  height: 100vh;
-  background: #ffff00 url("../img/main.jpg") no-repeat center center fixed;
-  background-size: cover; }
+.container_flex {
+  display: flex; }
 
-.overlay {
-  height: 100%;
-  background: linear-gradient(rgba(232, 129, 130, 0.85), rgba(240, 216, 137, 0.85)); }
-
-.menu {
-  margin: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-
-.menu_elements {
-  margin: 30px 1px;
-  text-align: center; }
-
-.menu_left_element {
-  color: #fff;
-  font-weight: bold;
-  font-size: 18px; }
-
-.menu_right_element {
-  display: flex;
+.space_between {
   justify-content: space-between; }
 
-.menu_right_element_items {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-.menu_right_element_item {
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 75px;
   width: 100%;
-  margin-left: 55px;
+  line-height: 75px; }
+
+.header_nav {
+  float: right; }
+
+.header_nav_element {
+  display: inline-block;
+  margin-left: 40px; }
+
+.header_nav__element_link {
+  position: relative;
+  text-transform: uppercase;
   color: #fff;
-  font-size: 12px;
-  text-transform: uppercase; }
-  .menu_right_element_item:after {
-    height: 3px;
+  font-size: 14px;
+  transition: all 0.3s; }
+  .header_nav__element_link:after {
+    content: "";
+    position: absolute;
     width: 0;
+    background-color: #fce38a;
+    height: 2px;
+    left: 0;
+    bottom: -7px;
+    transition: all 0.3s; }
+  .header_nav__element_link:hover {
     color: #fce38a; }
-  .menu_right_element_item:hover {
-    color: #fce38a; }
-  .menu_right_element_item:hover .menu_right_element_item:after {
+  .header_nav__element_link:hover:after {
     width: 100%; }
 
-.header_title {
-  margin-top: -81px;
-  height: 100%;
+.start_s {
+  height: 100vh;
+  background-image: url("../img/start_bg.jpg");
+  background-size: cover;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center; }
 
-.header_title_block {
-  text-align: center;
-  width: 805px; }
-  .header_title_block > h1 {
-    font-size: 48px;
-    margin-bottom: 45px;
-    color: #fff; }
-  .header_title_block > button {
-    margin-top: 50px;
-    background: transparent;
-    border: #fff solid 3px;
-    color: #fff;
-    font-weight: bold;
-    padding: 10px 30px; }
-  .header_title_block > div {
-    position: relative;
-    padding-bottom: 43px; }
-    .header_title_block > div:after {
-      background: #fff;
-      content: "";
-      display: block;
-      width: 60px;
-      height: 3px;
-      text-align: center;
-      position: absolute;
-      left: 50%;
-      bottom: 0;
-      margin: 0 0 0 -30px; }
-    .header_title_block > div > span {
-      display: block;
-      line-height: 110px;
-      font-size: 155px;
-      text-transform: uppercase;
-      color: #fff;
-      font-weight: bold;
-      margin-bottom: 30px; }
+.s_title_block {
+  width: 700px;
+  text-align: center; }
+
+.s_title_block__descr {
+  font-family: "Kaushan", sans-serif, sans-serif;
+  font-weight: normal;
+  font-size: 60px;
+  margin-bottom: 30px; }
+
+.s_title_block__title {
+  font-family: "Montserrat", sans-serif, sans-serif;
+  font-weight: 700;
+  font-size: 100px;
+  text-transform: uppercase; }
+
+.s_title_block_line {
+  height: 3px;
+  width: 70px;
+  background-color: #fff;
+  border: none;
+  margin: 30px auto; }
+
+.section_title {
+  margin: 60px auto; }
+
+.about_us {
+  width: 100%;
+  height: 700px; }
+
+.section_block_bg_image {
+  background-image: url("../img/about1.jpg");
+  position: center;
+  background-size: cover; }
 
 /*# sourceMappingURL=main.css.map */
