--- a/Prog/FRONT-END Start/Lesson_7/sass/main.sass
+++ b/Prog/FRONT-END Start/Lesson_7/sass/main.sass
@@ -1,7 +1,12 @@
+@import "vars"
+
 body
+  color: #fff
+  font-family: "Roboto", sans-serif
+  font-weight: normal
+  overflow: hidden
   margin: 0
-  //line-height: 0
-  font-family: sans-serif
+  line-height: 1
 
 h1, h2, h3, h4, h5, h6, p, ul
   margin: 0
@@ -12,103 +17,96 @@ ul
 a
   text-decoration: none
 
-.container
+.container, 
+.container_flex
   width: 1170px
-  height: 100%
   margin: 0 auto
 
-.header
-  height: 100vh
-  background: #ffff00 url("../img/main.jpg") no-repeat center center fixed
-  background-size: cover
-  
-.overlay
-  height: 100%
-  background: linear-gradient(rgba(232, 129, 130, .85), rgba(240, 216, 137, .85))
-
-.menu
-  margin: 0
+.container_flex
   display: flex
+
+.space_between
   justify-content: space-between
-  align-items: center
 
-.menu_elements
-  margin: 30px 1px
-  text-align: center
-
-.menu_left_element
-  color: #fff
-  font-weight: bold
-  font-size: 18px
-
-.menu_right_element
-  display: flex
-  justify-content: space-between
-  //line-height: 0
-  
-.menu_right_element_items
-  display: flex
-  justify-content: center
-  align-items: center
-
-.menu_right_element_item
+header
+  position: fixed
+  top: 0
+  left: 0
+  height: 75px
   width: 100%
-  margin-left: 55px
-  color: #fff
-  font-size: 12px
+  line-height: 75px
+
+.header_nav
+  float: right
+
+.header_nav_element
+  display: inline-block
+  margin-left: 40px
+
+.header_nav__element_link
+  position: relative
   text-transform: uppercase
+  color: #fff
+  font-size: 14px
+  transition: all 0.3s
   &:after
-    height: 3px
+    content: ''
+    position: absolute
     width: 0
-    color: #fce38a
+    background-color: $activeLink
+    height: 2px
+    left: 0
+    bottom: -7px
+    transition: all 0.3s
   &:hover
-    color: #fce38a
-  &:hover &:after
-    width: 100%
+    color: $activeLink
+  &:hover
+    &:after
+      width: 100%
 
-
-.header_title
-  margin-top: -81px
-  height: 100%
+.start_s
+  height: 100vh
+  background-image: url("../img/start_bg.jpg")
+  background-size: cover
   display: flex
-  flex-direction: column
   justify-content: center
   align-items: center
 
-.header_title_block
+.s_title_block
+  width: 700px
   text-align: center
-  width: 805px
-  >h1
-    font-size: 48px
-    margin-bottom: 45px
-    color: #fff
-  >button
-    margin-top: 50px
-    background: rgba(0, 0, 0, 0)
-    border: #fff solid 3px
-    color: #fff
-    font-weight: bold
-    padding: 10px 30px
-  >div
-    position: relative
-    padding-bottom: 43px
-    &:after
-      background: #fff
-      content: ''
-      display: block
-      width: 60px
-      height: 3px
-      text-align: center
-      position: absolute
-      left: 50%
-      bottom: 0
-      margin: 0 0 0 -30px
-    &>span
-      display: block
-      line-height: 110px
-      font-size: 155px
-      text-transform: uppercase
-      color: #fff
-      font-weight: bold
-      margin-bottom: 30px
+
+.s_title_block__descr
+  font-family: $handWritenFont, sans-serif
+  font-weight: normal
+  font-size: 60px
+  margin-bottom: 30px
+
+.s_title_block__title
+  font-family: $titleFont, sans-serif
+  font-weight: 700
+  font-size: 100px
+  text-transform: uppercase
+
+.s_title_block_line
+  height: 3px
+  width: 70px
+  background-color: #fff
+  border: none
+  margin: 30px auto
+
+.section_title
+  margin: 60px auto
+
+.about_us
+  width: 100%
+  height: 700px
+  
+
+
+.section_block_bg_image
+  background-image: url("../img/about1.jpg")
+  position: center
+  background-size: cover
+
 
