--- a/Prog/FRONT-END Start/Lesson_8/site/css/main.css
+++ b/Prog/FRONT-END Start/Lesson_8/site/css/main.css
@@ -17,6 +17,7 @@
   background-color: #95e1d3; }
 
 body {
+  width: 100%;
   font-family: "Roboto", sans-serif;
   font-weight: normal;
   overflow-x: hidden;
@@ -241,6 +242,7 @@ header {
   color: #999999; }
 
 .features {
+  width: 100%;
   height: 856px;
   background: url(../img/features_bg.jpg) no-repeat -500px center;
   position: relative;
@@ -374,6 +376,9 @@ header {
 .quote_s_nav_img--left {
   transform: rotateZ(90deg); }
 
+.meet_team_s {
+  margin-bottom: 118px; }
+
 .meet_team_s_member {
   width: 30%;
   margin-top: 96px;
@@ -400,6 +405,7 @@ header {
       .meet_team_s_member .meet_team_s_member_img:hover .block_overlay {
         opacity: 1; }
     .meet_team_s_member .meet_team_s_member_img .meet_team_s_member_photo {
+      height: 470px;
       width: 100%; }
   .meet_team_s_member .meet_team_s_member_name {
     display: inline-block;
@@ -443,5 +449,30 @@ header {
       background-color: #f38181; }
       .block_overlay .block_overlay_image:hover i {
         color: #fff; }
+
+.logo_s {
+  width: 100%;
+  background-color: #f8f8f8;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .logo_s .logo_s_img {
+    width: 100%;
+    margin: 60px auto; }
+
+.our_work_s {
+  width: 100%; }
+
+.our_work_s__content {
+  width: 100%;
+  display: flex; }
+  .our_work_s__content .our_work_s_content__block_4 {
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap; }
+  .our_work_s__content .our_work_s_content__block_vertical {
+    width: 25%; }
+  .our_work_s__content .our_work_s_content__block_2 {
+    width: 25%; }
 
 /*# sourceMappingURL=main.css.map */
