--- a/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
@@ -1,6 +1,7 @@
 @import "vars"
 
 body
+	width: 100%
 	font-family: "Roboto", sans-serif
 	font-weight: normal
 	overflow-x: hidden
@@ -237,6 +238,7 @@ header
 	color: #999999
 
 .features
+	width: 100%
 	height: 856px
 	background: url(../img/features_bg.jpg) no-repeat -500px center
 	position: relative
@@ -370,6 +372,9 @@ header
 .quote_s_nav_img--left
 	transform: rotateZ(90deg)
 
+.meet_team_s
+	margin-bottom: 118px
+
 .meet_team_s_member
 	width: 30%
 	margin-top: 96px
@@ -396,6 +401,7 @@ header
 			.block_overlay
 				opacity: 1
 		.meet_team_s_member_photo
+			height: 470px
 			width: 100%
 	.meet_team_s_member_name
 		display: inline-block
@@ -439,3 +445,30 @@ header
 			background-color: $mainColor2
 			i
 				color: #fff
+
+.logo_s
+	width: 100%
+	background-color: #f8f8f8
+	display: flex
+	justify-content: center
+	align-items: center
+	.logo_s_img
+		width: 100%
+		margin: 60px auto
+
+.our_work_s
+	width: 100%
+
+.our_work_s__content
+	width: 100%
+	display: flex
+	.our_work_s_content__block_4
+		width: 50%
+		display: flex
+		flex-wrap: wrap
+	.our_work_s_content__block_vertical
+		width: 25%
+	.our_work_s_content__block_2
+		width: 25%
+
+.our_work_s_content__block__img
