--- a/Prog/FRONT-END Start/Lesson_8/site/css/main.css
+++ b/Prog/FRONT-END Start/Lesson_8/site/css/main.css
@@ -473,6 +473,24 @@ header {
   .our_work_s__content .our_work_s_content__block_vertical {
     width: 25%; }
   .our_work_s__content .our_work_s_content__block_2 {
-    width: 25%; }
+    width: 25%;
+    display: flex;
+    flex-wrap: wrap; }
+
+.our_work_s_content__block_4 .our_work_s_content__block__img {
+  width: 50%;
+  height: 50%; }
+
+.our_work_s_content__block_2 .oour_work_s_content__block__img {
+  width: 100%;
+  height: 50%; }
+
+.our_work_s_content__block_vertical .our_work_s_content__block__img {
+  width: 100%;
+  height: 100%; }
+
+.our_work_s_content__block__img_main {
+  width: 100%;
+  height: 100%; }
 
 /*# sourceMappingURL=main.css.map */
