--- a/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
@@ -470,5 +470,24 @@ header
 		width: 25%
 	.our_work_s_content__block_2
 		width: 25%
+		display: flex
+		flex-wrap: wrap
 
-.our_work_s_content__block__img
+.our_work_s_content__block_4
+	.our_work_s_content__block__img
+		width: 50%
+		height: 50%
+
+.our_work_s_content__block_2
+	.oour_work_s_content__block__img
+		width: 100%
+		height: 50%
+
+.our_work_s_content__block_vertical
+	.our_work_s_content__block__img
+		width: 100%
+		height: 100%
+
+.our_work_s_content__block__img_main
+	width: 100%
+	height: 100%
