section happy clients WIP

--- a/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
@@ -460,6 +460,7 @@ header
 	width: 100%
 
 .our_work_s__content
+	margin-top: 100px
 	width: 100%
 	display: flex
 	.our_work_s_content__block_4
@@ -491,3 +492,6 @@ header
 .our_work_s_content__block__img_main
 	width: 100%
 	height: 100%
+
+.round_img
+	border-radius: 50%
