--- a/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
@@ -700,6 +700,32 @@ footer
 
 .footer_s__blogs
 	width: 26.6%
+	.footer_s__blogs__title
+		text-transform: uppercase
+		font-family: $titleFont
+		font-weight: bold
+		font-size: 15px
+		margin-bottom: 50px
+	.footer_s__blogs_post
+		display: flex
+		margin-top: 30px
+		.footer_s__blogs_post_image
+			margin-right: 20px
+			.footer_s__blogs_post_img
+				width: 100%
+				line-height: 0
+		.footer_s__blogs_post_info
+			.footer_s__blogs_post_info_title
+				font-family: $titleFont
+				font-weight: bold
+				font-size: 14px
+				margin-top: 30px 0 10px 0
+			.footer_s__blogs_post_info_date
+				font-family: $mainFont
+				font-weight: 300
+				font-style: italic
+				font-size: 12px
+				color: $lightGrey
 
 .footer_s__instagram
 	width: 22.5%
