--- a/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
+++ b/Prog/FRONT-END Start/Lesson_8/site/sass/main.sass
@@ -596,12 +596,6 @@ header
 		font-size: 14px
 		font-weight: normal
 		color: #b3b3b3
-	.blog_s_block_line
-		width: 100%
-		height: 1px
-		border: none
-		background-color: $lightGrey
-		margin: 20px 0
 	.blog_s_block_info
 		text-align: left
 		.blog_s_block_info__img
@@ -610,6 +604,13 @@ header
 			margin-right: 20px
 			color: $lightGrey
 			font-style: italic
+
+.blog_s_block_line
+	width: 100%
+	height: 1px
+	border: none
+	background-color: #e5e5e5
+	margin: 20px 0
 		
 .map_s
 	width: 100%
@@ -650,7 +651,7 @@ footer
 		font-weight: bold
 		font-size: 46px
 	.footer_s__mogo__text
-		margin: 46px 0
+		margin: 42px 0
 		font-family: $mainFont
 		font-size: 15px
 		font-weight: normal
@@ -676,7 +677,7 @@ footer
 			margin-right: 20px
 			height: 15px
 	.footer_s__mogo__subscribe
-		margin-top: 38px
+		margin-top: 39px
 		display: flex
 		.footer_s__mogo__subscribe__mail
 			padding-left: 10px
@@ -699,33 +700,65 @@ footer
 			line-height: 0
 
 .footer_s__blogs
-	width: 26.6%
-	.footer_s__blogs__title
-		text-transform: uppercase
-		font-family: $titleFont
-		font-weight: bold
-		font-size: 15px
-		margin-bottom: 50px
+	width: 28.5%
 	.footer_s__blogs_post
 		display: flex
 		margin-top: 30px
 		.footer_s__blogs_post_image
 			margin-right: 20px
+			line-height: 0
 			.footer_s__blogs_post_img
-				width: 100%
-				line-height: 0
+				width: 120px
 		.footer_s__blogs_post_info
 			.footer_s__blogs_post_info_title
+				text-transform: uppercase
 				font-family: $titleFont
-				font-weight: bold
-				font-size: 14px
-				margin-top: 30px 0 10px 0
+				font-weight: normal
+				font-size: 12px
+				margin: 20px 0 10px 0
 			.footer_s__blogs_post_info_date
 				font-family: $mainFont
 				font-weight: 300
 				font-style: italic
-				font-size: 12px
+				font-size: 13px
 				color: $lightGrey
 
+.footer_s__block__title
+	text-transform: uppercase
+	font-family: $titleFont
+	font-weight: normal
+	font-size: 14px
+	margin-bottom: 40px
+
 .footer_s__instagram
-	width: 22.5%
+	width: 22.75%
+	.footer_s__instagram__photos
+		display: flex
+		flex-wrap: wrap
+		.footer_s__instagram__photos_img
+			margin-right: 3px
+			.footer_s__instagram__photos_img_picture
+				width: 100%
+	.footer_s__instagram__view_more
+		font-family: $mainFont
+		font-weight: 300
+		font-style: italic
+		font-size: 13px
+		color: #bebebe
+		margin-top: 14px
+
+.footer__line
+	margin-top: 68px
+	width: 100%
+	height: 1px
+	border: none
+	background-color: #e5e5e5
+
+.footer_s__rights
+	text-align: center
+	line-height: 60px
+	font-family: $mainFont
+	font-weight: normal
+	font-size: 14px
+	>span
+		color: $mainColor2
