--- a/angular_test/app/app.component.html
+++ b/angular_test/app/app.component.html
@@ -1,49 +1,27 @@
-<header>
-    <nav class="navbar navbar-inverse">
 
-        <div class="navbar-header">
-            <a href="/" class="navbar-brand">My Angular app</a>
+<header>
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+
+            <div class="navbar-header">
+                <a routerLink="/" class="navbar-brand" routerLinkActive="active"
+                   [routerLinkActiveOptions]="{ exact: true }">My Routing App</a>
+            </div>
+
+            <ul class="nav navbar-nav">
+                <li><a routerLink="/" routerLinkActive="active"
+                       [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
+                <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+                <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+            </ul>
+
         </div>
     </nav>
-</header>
 
+</header>
 <main>
 
-    <div class="row">
-        <div class="col-sm-4">
-
-            <div *ngIf="users">
-                <ul class="list-group users-list">
-                    <li class="list-group-item"
-                        *ngFor="let user of users"
-                        (click)="selectUser(user)"
-                        [class.active]="user === activeUser">
-                        {{ user.name }} ({{ user.username }})
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-        <div class="col-sm-8">
-
-            <div class="jumbotron" *ngIf="activeUser">
-                <h2>{{ activeUser.name }}
-                    <small>{{ activeUser.username }}</small>
-                </h2>
-
-                <input class="form-control" [(ngModel)]="activeUser.name">
-            </div>
-
-            <div class="jumbotron" *ngIf="!activeUser">
-                <span class="glyphicon glyphicon-hand-left"></span>
-                <h2>Choose a user</h2>
-            </div>
-
-        </div>
-    </div>
+    <router-outlet></router-outlet>
 
 </main>
-
-<footer class="text-center">
-    Copyright &copy; 2017
-</footer>
